--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 
 
     <script>
-      13
+      var H = prompt("Set Hour");
+        var m = prompt("Set Minutes")
+        var s = prompt("Set Minute")
 
         var mj = function () {
             var mm = new Date()
